# hopswork_credit_data

./: README.md  config.py  feature_extraction.py  infer.py  pyproject.toml  train.py
credit_classification_model/: credit_scores_model.pkl
databricks/: feature_extraction.py  utils.py
hopswork/: config.py  infer.py  test.py  train.py
hopswork/credit_classification_model/: model.pkl
notebooks/: feautures.ipynb
